# heart_monitor

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  prj.conf
boards/designedbygurkan/custom_discovery/: Kconfig.custom_discovery  board.yml  custom_discovery.dts  custom_discovery.yaml
scripts/: docker_entrypoint.py
src/: main.c  system_reset_reason.c  watchdog.c
src/include/: system_reset_reason.h  watchdog.h
